shortened width to fix overflow issue

--- a/src/_elements.scss
+++ b/src/_elements.scss
@@ -83,7 +83,7 @@ button {
 }
 
 .flex-full {
-  width: 100vw;
+  width: 100%;
   align-items: center;
   display: flex;
   flex-direction: column;
