--- a/src/components/Opportunities/_Opportunities.scss
+++ b/src/components/Opportunities/_Opportunities.scss
@@ -1,7 +1,7 @@
 @import "../../variables";
 
 .opportunities {
-  width: 100vw;
+  width: 95vw;
   padding: $full-screen-safe-zone;
   box-sizing: border-box;
 
